# Random-Maze-Solver

./: CMakeLists.txt  maze.cpp  maze.h  maze_generation.cpp  particle.cpp  particle.h  random_maze_solver_parallel.cpp  random_maze_solver_sequential.cpp
input/: maze_100.txt  maze_50.txt
output/: simulation_times.csv
